@@ -28,4 +28,4 @@ Search::Query = 0.21
 
 [Prereqs / TestRequires]
 Test::More = 0.98
-Test::DBIx::Class = 0.34
+Test::DBIx::Class = 0.35
